app/assets/stylesheets/home.css.scss
#home-page {

  #content { @include center-align(); }

  .kids-pic {
    width: 130px;
    height: 90px;
    margin-top: 5px;
    margin-left: 32px;
    margin-right: 30px;
    border: 3px solid lighten($text-color, 5%);
    @include rounded-corner();
  }
  .bought-pies {
    @include edged-panel();
    @include plaintext-font();
    @include font-size-tiny();
    padding: 10px;
    margin: { left: 32px; top: 6px; }
    width: 114px;
  }

  #cyber-dojo {
    @include non-code-font();
    font-size: 8.50em;
        color: $text-color;
       margin: { bottom: 0px; }
      padding: { bottom: 0px; }
    .dot-org { font-size: 0.43em; }
  }

  #the-place-to-practice-programming {
    @include non-code-font();
       margin: { right: 0px; bottom: 3px; }
    font-size: 1.12em;
        color: lighten($text-color, 5%);
     position: relative;
          top: -9px;
  }

  #avatars-grid {
       width: 235px;
    position: relative;
        left: 2px;
         top: 2px;
  }

  #custom-container {
    position: absolute;
        left: 675px;
        top: 350px;
  }

  #setup-default-session-button,
  #setup-custom-session-button,
  #enter-button,
  #charity-button,
  #donate-button {
    @include non-code-font();
    @include font-size-largest();
       padding: { right: 20px; }
        margin: { left: 10px; }
         color: $darker-color;
    text-align: right;
  }

  #setup-default-session-button,
  #setup-custom-session-button,
  #enter-button {
          width: 390px;
      font-size: 1.97em;
    line-height: 95%;
        padding: { top: 12px; bottom: 12px; right: 15px; }
         margin: { top: 6px; bottom: 6px; }
  }

  #donate-container,
  #charity-container {
    @include plaintext-font();
    @include edged-panel();
          width: 368px;
          height: 80px;
          padding: { right: 15px; }
         margin: { top: 4px; left: 15px; bottom: 4px; }
     text-align: right;
      font-size: 1.0em;
  }

  #licensing-container,
  #info-container {
    @include plaintext-font();
    @include edged-panel();
          width: 230px;
          height: 80px;
          padding: { left: 0px; right: 0px; }
         margin: { top: 4px; left: 0px; right: 0px; bottom: 4px; }
     text-align: left;
      font-size: 0.8em;
  }

  #donate-container #donate-button,
  #charity-container #charity-button {
          width: 140px;
         margin: { right: 0px; top: 5px; bottom: 5px; }
        padding: 10px;
     text-align: center;
      font-size: 1.70em;
    line-height: 95%;
  }
}

